[gd_scene load_steps=16 format=4 uid="uid://cndrt5rk7dflr"]

[ext_resource type="Script" path="res://scenes/Title Screen.gd" id="1_hetig"]
[ext_resource type="PackedScene" uid="uid://cviolhgw0qpup" path="res://Props/interactables/dungeon/Statue_Pushable.tscn" id="2_7mvba"]
[ext_resource type="AudioStream" uid="uid://butg7t224mnkq" path="res://assets/waves.mp3" id="2_63awr"]
[ext_resource type="AudioStream" uid="uid://cl0uwrawbc7ho" path="res://assets/menu_focus.wav" id="3_7qgrh"]
[ext_resource type="Texture2D" uid="uid://bgxsipf480exq" path="res://assets/title.png" id="3_kbdy6"]
[ext_resource type="AudioStream" uid="uid://c2jm4s18ltluk" path="res://assets/menu_select.wav" id="4_naawc"]
[ext_resource type="PackedScene" uid="uid://6itqmku4udbn" path="res://Levels/player_spawn.tscn" id="5_e6nwd"]
[ext_resource type="Texture2D" uid="uid://nl3oyq4qol8j" path="res://assets/Tile Maps/Sprites/dungeon.png" id="5_u38fa"]
[ext_resource type="Script" path="res://TileMaps/LevelTileMapLayer.gd" id="6_4b0xr"]
[ext_resource type="PackedScene" uid="uid://cn5rteoxnoscc" path="res://splash_screen.tscn" id="8_uwlh5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_v6ejt"]
texture = ExtResource("5_u38fa")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
13:0/0 = 0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
14:0/0 = 0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
15:0/0 = 0
15:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
14:1/0 = 0
14:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
15:1/0 = 0
15:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:2/0 = 0
12:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
13:2/0 = 0
13:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
14:2/0 = 0
14:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
15:2/0 = 0
15:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:3/0 = 0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:3/0 = 0
13:3/0 = 0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
14:3/0 = 0
14:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
15:3/0 = 0
15:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:4/0 = 0
11:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:4/0 = 0
12:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
13:4/0 = 0
13:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
14:4/0 = 0
14:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
15:4/0 = 0
15:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -16, -16, -16, -16, 16, -7, 16)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(7, -16, 16, -16, 16, 16, 7, 16)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:5/0 = 0
10:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:5/0 = 0
11:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:5/0 = 0
12:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
13:5/0 = 0
13:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
14:5/0 = 0
14:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
15:5/0 = 0
15:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:6/0 = 0
9:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:6/0 = 0
10:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:6/0 = 0
11:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:6/0 = 0
12:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
13:6/0 = 0
13:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
14:6/0 = 0
14:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
15:6/0 = 0
15:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:7/0 = 0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7, -16, -16, -16, -16, 16, -7, 16)
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(7, -16, 16, -16, 16, 16, 7, 16)
7:7/0 = 0
7:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:7/0 = 0
8:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:7/0 = 0
9:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:7/0 = 0
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:7/0 = 0
11:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:7/0 = 0
12:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
13:7/0 = 0
13:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
14:7/0 = 0
14:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
15:7/0 = 0
15:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_am7wt"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 16
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_v6ejt")

[sub_resource type="Animation" id="Animation_i8xw0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ds8dd"]
resource_name = "default"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bkynt"]
_data = {
"RESET": SubResource("Animation_i8xw0"),
"default": SubResource("Animation_ds8dd")
}

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_hetig")
music = ExtResource("2_63awr")
button_focus_audio = ExtResource("3_7qgrh")
button_pressed_audio = ExtResource("4_naawc")

[node name="Background" type="TileMapLayer" parent="."]
z_index = -5
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAP//AAAIAAUAAAAAAAAAAAAIAAUAAAAAAAEAAAAIAAUAAAAAAAIAAAAEAAUAAAAAAAMAAAAEAAYAAAAAAAQAAAAEAAcAAAAAAAUAAAAAAAQAAAAAAAYAAAADAAAAAAAAAAcAAAACAAAAAAAAAAgAAAAKAAYAAAAAAAkAAAAIAAUAAAABAP//AAAIAAUAAAABAAAAAAAIAAUAAAABAAEAAAAIAAUAAAABAAIAAAAHAAUAAAABAAMAAAAHAAYAAAABAAQAAAAHAAcAAAABAAUAAAABAAEAAAABAAYAAAAAAAEAAAABAAcAAAADAAEAAAABAAgAAAALAAYAAAABAAkAAAAIAAUAAAACAP//AAAJAAAAAAACAAAAAAAJAAEAAAACAAEAAAAJAAIAAAACAAIAAAADAAQAAAACAAMAAAAGAAMAAAACAAQAAAAGAAQAAAACAAUAAAABAAAAAAACAAYAAAAAAAQAAAACAAcAAAABAAEAAAACAAgAAAAMAAYAAAACAAkAAAAIAAUAAAADAP//AAAKAAAAAAADAAAAAAAKAAEAAAADAAEAAAAKAAIAAAADAAIAAAAHAAIAAAADAAMAAAAHAAMAAAADAAQAAAAHAAQAAAADAAUAAAAAAAMAAAADAAYAAAABAAAAAAADAAcAAAAAAAQAAAADAAgAAAANAAYAAAADAAkAAAAIAAUAAAAEAP//AAALAAAAAAAEAAAAAAALAAEAAAAEAAEAAAALAAIAAAAEAAIAAAAIAAIAAAAEAAMAAAAIAAMAAAAEAAQAAAAIAAQAAAAEAAUAAAAAAAQAAAAEAAYAAAAAAAAAAAAEAAcAAAABAAQAAAAEAAgAAAAOAAYAAAAEAAkAAAAIAAUAAAAFAP//AAAEAAUAAAAFAAAAAAAEAAYAAAAFAAEAAAAEAAcAAAAFAAIAAAADAAEAAAAFAAMAAAABAAIAAAAFAAQAAAAAAAEAAAAFAAUAAAABAAAAAAAFAAYAAAADAAAAAAAFAAcAAAABAAQAAAAFAAgAAAAKAAYAAAAFAAkAAAAIAAUAAAAGAP//AAAHAAUAAAAGAAAAAAAHAAYAAAAGAAEAAAAHAAcAAAAGAAIAAAABAAAAAAAGAAMAAAADAAAAAAAGAAQAAAADAAAAAAAGAAUAAAABAAMAAAAGAAYAAAACAAIAAAAGAAcAAAABAAQAAAAGAAgAAAALAAYAAAAGAAkAAAAIAAUAAAAHAP//AAAKAAAAAAAHAAAAAAAMAAEAAAAHAAEAAAAMAAIAAAAHAAIAAAADAAIAAAAHAAMAAAAAAAMAAAAHAAQAAAADAAIAAAAHAAUAAAACAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAMAAAAHAAgAAAAMAAYAAAAHAAkAAAAIAAUAAAAIAP//AAAEAAUAAAAIAAAAAAAEAAYAAAAIAAEAAAAEAAcAAAAIAAIAAAAAAAMAAAAIAAMAAAADAAEAAAAIAAQAAAACAAIAAAAIAAUAAAAAAAAAAAAIAAYAAAABAAIAAAAIAAcAAAACAAAAAAAIAAgAAAANAAYAAAAIAAkAAAAIAAUAAAAJAP//AAAHAAUAAAAJAAAAAAAHAAYAAAAJAAEAAAAHAAcAAAAJAAIAAAADAAEAAAAJAAMAAAAAAAMAAAAJAAQAAAABAAIAAAAJAAUAAAABAAEAAAAJAAYAAAABAAAAAAAJAAcAAAABAAMAAAAJAAgAAAAOAAYAAAAJAAkAAAAIAAUAAAAKAP//AAAOAAAAAAAKAAAAAAANAAEAAAAKAAEAAAANAAIAAAAKAAIAAAAEAAIAAAAKAAMAAAAEAAMAAAAKAAQAAAAEAAQAAAAKAAUAAAADAAAAAAAKAAYAAAABAAAAAAAKAAcAAAAAAAQAAAAKAAgAAAAKAAYAAAAKAAkAAAAIAAUAAAALAP//AAANAAAAAAALAAAAAAAOAAEAAAALAAEAAAAOAAIAAAALAAIAAAAFAAIAAAALAAMAAAAFAAMAAAALAAQAAAAFAAQAAAALAAUAAAADAAEAAAALAAYAAAACAAIAAAALAAcAAAAAAAIAAAALAAgAAAALAAYAAAALAAkAAAAIAAUAAAAMAP//AAAPAAAAAAAMAAAAAAAPAAIAAAAMAAEAAAAPAAMAAAAMAAIAAAACAAQAAAAMAAMAAAAGAAMAAAAMAAQAAAAGAAQAAAAMAAUAAAACAAEAAAAMAAYAAAABAAMAAAAMAAcAAAADAAEAAAAMAAgAAAAMAAYAAAAMAAkAAAAIAAUAAAANAP//AAAIAAUAAAANAAAAAAAIAAUAAAANAAEAAAAIAAUAAAANAAIAAAAEAAUAAAANAAMAAAAEAAYAAAANAAQAAAAEAAcAAAANAAUAAAAAAAEAAAANAAYAAAABAAAAAAANAAcAAAAAAAMAAAANAAgAAAANAAYAAAANAAkAAAAIAAUAAAAOAP//AAAIAAUAAAAOAAAAAAAIAAUAAAAOAAEAAAAIAAUAAAAOAAIAAAAHAAUAAAAOAAMAAAAHAAYAAAAOAAQAAAAHAAcAAAAOAAUAAAAAAAEAAAAOAAYAAAADAAAAAAAOAAcAAAABAAAAAAAOAAgAAAAOAAYAAAAOAAkAAAAIAAUAAAAAAP7/AAAIAAUAAAABAP7/AAAIAAUAAAACAP7/AAAIAAUAAAADAP7/AAAIAAUAAAAEAP7/AAAIAAUAAAAFAP7/AAAIAAUAAAAGAP7/AAAIAAUAAAAHAP7/AAAIAAUAAAAIAP7/AAAIAAUAAAAJAP7/AAAIAAUAAAAKAP7/AAAIAAUAAAALAP7/AAAIAAUAAAAMAP7/AAAIAAUAAAANAP7/AAAIAAUAAAAOAP7/AAAIAAUAAAA=")
tile_set = SubResource("TileSet_am7wt")
rendering_quadrant_size = 32
script = ExtResource("6_4b0xr")

[node name="Layer1" type="TileMapLayer" parent="."]
use_parent_material = true
tile_set = SubResource("TileSet_am7wt")

[node name="StatuePushable" parent="." instance=ExtResource("2_7mvba")]
position = Vector2(81, 168)

[node name="StatuePushable2" parent="." instance=ExtResource("2_7mvba")]
position = Vector2(399, 169)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control"]
position = Vector2(244, 77)
texture = ExtResource("3_kbdy6")
hframes = 4
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_bkynt")
}
autoplay = "default"

[node name="NewGameButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 204.0
offset_top = 142.0
offset_right = 277.0
offset_bottom = 168.0
text = "New Game"

[node name="LoadGameButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 204.0
offset_top = 172.0
offset_right = 277.0
offset_bottom = 198.0
text = "Continue"

[node name="QuitGameButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 204.0
offset_top = 202.0
offset_right = 277.0
offset_bottom = 228.0
text = "Quit"

[node name="SplashScreen" parent="CanvasLayer" instance=ExtResource("8_uwlh5")]

[node name="PlayerSpawn" parent="." instance=ExtResource("5_e6nwd")]
position = Vector2(242, 142)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
max_polyphony = 4
